--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/googlemaps": "^3.43.3",
     "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
     "firebase": "^10.4.0",
