--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/googlemaps": "^3.43.3",
+    "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
     "firebase": "^10.4.0",
