--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,17 @@
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+    "headers": [
+      {
+        "source": "**/*.@(jpg|jpeg|gif|png|svg|webp|js|css|eot|otf|ttf|ttc|woff|woff2|font.css)",
+        "headers": [
+            {
+                "key": "Cache-Control",
+                 "value": "max-age=0"
+            }
+        ]
+      }
     ]
   }
 }
