--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.2",
     "@types/googlemaps": "^3.43.3",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
