--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
     "@types/googlemaps": "^3.43.3",
+    "@types/react-chartjs-2": "^2.5.7",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
     "firebase": "^10.4.0",
@@ -21,6 +23,7 @@
     "next": "13.5.4",
     "node-fetch": "^3.3.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
